--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,16 @@
 
 body
 {
-    background: url(../../assets/images/background.png);
+    background-image: url(../../assets/images/portfolio-background.jpg);
+    opacity: 1.5;
+    background-position: center;
+    background-size: cover;
     
 }
 
 #maincontent
 {
-    background: white;
+    background: rgb(255, 255, 255, 0.5);
     border: 2px solid #cccccc;
     margin-top: 2%;
     margin-bottom:8%;
@@ -20,10 +23,24 @@ body
     padding-bottom: 1%;  
 }
 
-.navbar .container .name
+.name:hover
 {
-    background: #4aaaa5;
+    color: turquoise;
+    transform: scale(1.3);
 }
+
+.nav-link
+{
+    text-decoration: none;
+    color: white;
+}
+
+.nav-link:hover
+{
+    color: turquoise;
+    transform: scale(1.3);
+}
+
 h1 
 {
     color: white;
@@ -31,20 +48,26 @@ h1
     font-size: 150%;
     padding: 2%;
 }
+
+h1:hover
+{
+    color: turquoise;
+}
 h2
 {
     padding: 2%;
-    color: #4aaaa5;   
+    color: white;   
 }
 
 h4
 {
-    color: #4aaaa5;
+    color: white;
     padding: 5%;
 }
 
 p{
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 
 .footer
@@ -81,6 +104,8 @@ p{
 
 }
 
+
+
 .text-block a{
 
     color: white;
@@ -91,22 +116,53 @@ p{
     position: relative;
 }
 
+.contain:hover .text-block
+{
+    -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
 .text-block {
-    background: #4aaaa5;
-    width: 100%;
     position: absolute;
-    bottom: 10%;
-    text-align: center;
+    bottom: 0;
     left: 0;
+    right: 0;
+    background-color: rgb(54, 126, 150, 0.5);
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
 
 }
 
+.text-block a
+{
+    text-decoration: none;
+    color: black;
+}
+.link 
+{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
 /* contact.html design */
 
 #contact
 {
-    background: white;
+    background: rgb(255, 255, 255, 0.5);
     border: 2px solid #cccccc;
     margin-top: 2%;
     margin-bottom:10%;
@@ -121,7 +177,7 @@ p{
 {
     margin: auto;
     float: right;
-    background: white;
+    background: rgb(255, 255, 255, 0.5);
     border: 2px solid #cccccc;
     margin-top: 2%;
     margin-bottom:auto;
@@ -156,4 +212,10 @@ hr
 .form-group #submit 
 {
     background: #4aaaa5;
+}
+
+h5
+{
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
